--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: biosciences:v1
     build: .
     container_name: biosciences_apps
-    command: streamlit run ./src/app.py
+    command: streamlit run ./app.py
     ports:
       - 8501:8501
     volumes:
